Fix T53040: Vertex paint, texure & symmetry fail

Removed old logic for brush texture which was being applied twice.